2006-03-02 Lluis Sanchez Gual  <lluis@novell.com>   
 
	Initial implementation of the Stetic add-in.