@@ -1,3 +1,8 @@
+2006-03-02 Lluis Sanchez Gual  <lluis@novell.com>    
+ 
+	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderView.cs: Propagate
+	  project changes to the editor.
+ 
 2006-03-02 Lluis Sanchez Gual  <lluis@novell.com>   
  
 	Initial implementation of the Stetic add-in.
